// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when domain entity extension extends an invalid identifier should have validation failures() 1`] = `"Domain Entity additions 'EntityName' does not match any declared Domain Entity or Domain Entity Subclass in namespace EdFi."`;

exports[`when domain entity extension extends an invalid identifier should have validation failures() 2`] = `
Object {
  "column": 16,
  "line": 11,
  "tokenText": "EdFi",
}
`;

exports[`when domain entity extension specifies wrong namespace should have validation failures() 1`] = `"Domain Entity additions 'EntityName' does not match any declared Domain Entity or Domain Entity Subclass in namespace Extension."`;

exports[`when domain entity extension specifies wrong namespace should have validation failures() 2`] = `
Object {
  "column": 16,
  "line": 11,
  "tokenText": "Extension",
}
`;
